# portable-snippets

./: meson.build
atomic/: atomic.h
cpu/: cpu.c
exact-int/: exact-int.h
once/: once.h
tests/: clock.c
